# GEO_BAKER

./: .gitignore  AGENT_PROMPT.md  ARCHITECTURE_ANALYSIS.md  CHANGELOG.md  FUNCTION_ARCHITECTURE.md  LICENSE  README.md  pyproject.toml  requirements.txt
data/: global_cities.json
docs/: README.md  overview.md  technical_reference.md
geo_baker_pkg/: __init__.py  cli.py  core.py  io.py  pipeline.py  verify_cities.py
scripts/: cleanup_for_rebake.py  quad_view.py  verify.py
scripts/borders/: build_world_border.py  fetch_world_boundaries_with_cn_overlay.py  world_border_hardcoded.py
scripts/facilities/: build_global_airports_and_plot_china.py  fetch_global_major_facilities.py
scripts/interop_export/: build_country_interop.py
scripts/visualization/: visualize_geojson.py  visualize_heatmaps.py
tests/: test_io_shards.py  test_pipeline_controls.py  test_quadtree_split.py
tools/: bake_background.sh  compare_tiles_ab.py  fix_coastal.sh  geo_inspect.py  geo_suite.py  verify_cities.py  visualize.py
